# anchor

./: .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  server.py
docs/: google_outreach_draft.md
examples/: README.md  anchor_quickstart.ipynb  batch_query.py  finetune.py  langchain_integration.py  query.py
src/anchor_vision/: __init__.py  client.py  langchain.py
