[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchor-vision"
version = "0.1.0"
description = "Python client for Anchor — PaliGemma2 multi-LoRA vision inference"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["paligemma", "vision", "lora", "multimodal", "langchain", "industrial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0", "pydantic>=2.0"]
all = ["langchain-core>=0.1.0", "pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/recursia-lab/anchor"
Repository = "https://github.com/recursia-lab/anchor"
"Bug Tracker" = "https://github.com/recursia-lab/anchor/issues"

[tool.setuptools.packages.find]
where = ["src"]
